# modus-act-reduce

./: .gitignore  CMakeLists.txt
api/: CMakeLists.txt  api.h  feed_def.h  fx.h  modus_context.h  rfx.h  uds.cpp  uds.h  uds_def.cpp  uds_def.h  uds_map_def.cpp  uds_map_def.h  uds_reduce_def.h
apidemo/: CMakeLists.txt  apidemo  apidemo.cpp  mapjobex.cpp
dyn/: CMakeLists.txt  coutnode.cpp  coutnode.h  fixed_loader.cpp  fixed_loader.h
tests/: CMakeLists.txt  api_test.cpp  loader_test.cpp  test_runner.cpp
uds/: CMakeLists.txt  datum.h  dummy.cpp  dynamic_loader.h  externalizable.h  from.h  int_externalizable.h  loader.h  node.h  uds.h
udsdemo/: CMakeLists.txt  dynamic_loader.h  udsdemo.cpp
